<resources>
    <string name="app_name">HM-10 Term</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="state_enable">Enabled</string>
    <string name="state_disable">Disabled</string>
    <string name="menu_connect">Enable</string>
    <string name="menu_disconnect">Disable</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="label_state">Enable/Disable vibration</string>
    <string name="label_send">Send</string>
    <string name="label_frequency">Frequency vibration</string>
    <string name="label_device_name">Name:</string>
    <string name="label_device_address">Address:</string>
    <string name="default_device_name">HM-10</string>
    <string name="default_device_address">00:00:00:00:00:00</string>
    <string name="label_power">Power level</string>
    <string name="ble_uuid">0000ffe0-0000-1000-8000-00805f9b34fb</string>
</resources>
