<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BallActivity">

    <LinearLayout
        android:id="@+id/llConnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/pbConnect"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onChangeState" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTerminal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_device_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvDeviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_device_address"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_power"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/label_send" />
        </LinearLayout>

        <EditText
            android:id="@+id/etLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/tvLabelFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_frequency"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>